Add coverage instrumentation to failsafe as well, and run ITs in parallel.