@@ -131,6 +131,15 @@
         <version>3.0.0-M1</version>
         <configuration>
           <trimStackTrace>false</trimStackTrace>
+          <argLine>
+            @{argLine}
+            --add-opens stormpot/stormpot=ALL-UNNAMED
+            --add-opens stormpot/blackbox=ALL-UNNAMED
+            --add-opens stormpot/extensions=ALL-UNNAMED
+            -Djunit.jupiter.execution.parallel.enabled=true
+            -Djunit.jupiter.execution.parallel.mode.classes.default=concurrent
+            -Djunit.jupiter.execution.timeout.default=30m
+          </argLine>
         </configuration>
         <executions>
           <execution>
